Add design page

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
       </div>
     </div>
     <div class="row section">
-      <div id="about" class="col-lg-6 col-lg-offset-3">
+      <div id="about" class="col-lg-8 col-lg-offset-2">
         <h3 class="text-center"><b>ABOUT</b></h3><br>
         <h4>Introduction</h4>
-        <p>Hey there. I am Sudharsanan, 22 from India. Currently a Graduate student in Computer Science at University of Texas, Dallas. A Rubyist, Hacker, Blogger and a Technophile. Check out my Skills in the section below.
+        <p>Hey there. I am Sudharsanan, 22 from India. Currently a Graduate student in Computer Science at University of Texas, Dallas. A Rubyist, Hacker, Blogger and a Technophile. Check out my Skills in the section below.</p>
         <h4>Web Development</h4>
         <p>I am a Full stack web developer who is totally passionate about the web. I use Ruby on Rails &amp; Ember.js to create web applications.</p>
         <h4>UI/UX Design</h4>
-        <p>I love creating simple, flat and elegant interfaces for the Web and Mobile. For designing web applications I use Twitter Bootstrap(Predominantly) and Zurb Foundation. I have also designed some themes built on Bootstrap.</p>
+        <p>I love creating simple, flat and elegant interfaces for the Web and Mobile. For designing web applications I use Twitter Bootstrap(Predominantly) and Zurb Foundation. Checkout my designs <a href="design.html" target="_blank">here</a></p>
         <h4>Mobile Development</h4>
         <p>Apart from Web development I develop applications for Android. I have 1+ years experience in Mobile App development.</p>
         <h4>Open Source</h4>
@@ -281,49 +281,49 @@
         <h3 class="text-center"><b>BLOG</b></h3>
         <p>
          I am a part-time Blogger. I blog about Ruby, Rails &amp; Android. Check out my blog at <a href="http://sudharti.github.io/">http://sudharti.github.io/</a>
-        </p>
-      </div>
-    </div>
-    <div class="row section">
-      <div id="contact" class="col-lg-8 col-lg-offset-2 text-center">
-        <h3><b>CONTACT</b></h3>
-        <a id="phone" href="javascript:void(0);" class="social-link" data-toggle="popover" title="Phone" data-content="Reach me anytime at (469)-789-9579" data-placement="top">
-          <i class="fa fa-phone"></i>
-        </a>
-        <a id="mail" href="mailto:sudhar.ti@gmail.com" class="social-link">
-          <i class="fa fa-envelope"></i>
-        </a>
-        <a id="fb-social" href="https://www.facebook.com/sudharshan.muralidharan" class="social-link" target="_blank">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a id="google-social" href="https://plus.google.com/u/0/+SudharshanMuralidharan" class="social-link" target="_blank">
-          <i class="fa fa-google-plus"></i>
-        </a>
-        <a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
-          <i class="fa fa-github"></i>
-        </a>
-        <a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" class="social-link" target="_blank">
-          <i class="fa fa-linkedin"></i>
-        </a>
-      </div>
+       </p>
+     </div>
+   </div>
+   <div class="row section">
+    <div id="contact" class="col-lg-8 col-lg-offset-2 text-center">
+      <h3><b>CONTACT</b></h3>
+      <a id="phone" href="javascript:void(0);" class="social-link" data-toggle="popover" title="Phone" data-content="Reach me anytime at (469)-789-9579" data-placement="top">
+        <i class="fa fa-phone"></i>
+      </a>
+      <a id="mail" href="mailto:sudhar.ti@gmail.com" class="social-link">
+        <i class="fa fa-envelope"></i>
+      </a>
+      <a id="fb-social" href="https://www.facebook.com/sudharshan.muralidharan" class="social-link" target="_blank">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a id="google-social" href="https://plus.google.com/u/0/+SudharshanMuralidharan" class="social-link" target="_blank">
+        <i class="fa fa-google-plus"></i>
+      </a>
+      <a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
+        <i class="fa fa-github"></i>
+      </a>
+      <a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" class="social-link" target="_blank">
+        <i class="fa fa-linkedin"></i>
+      </a>
     </div>
   </div>
-  <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap-progressbar.min.js"></script>
-  <script type="text/javascript" src="js/util.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+</div>
+<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-progressbar.min.js"></script>
+<script type="text/javascript" src="js/util.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-59264101-1', 'auto');
-    ga('send', 'pageview');
+  ga('create', 'UA-59264101-1', 'auto');
+  ga('send', 'pageview');
 
-  </script>
+</script>
 </body>
 </html>
