--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Portfolio | Sudharsanan | Web Developer | Grad Student</title>
+  <title>Portfolio | SM | Web Developer | Grad Student</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,34 +16,36 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href>SM</a>
+  <div id="container">
+    <nav class="navbar navbar-fixed-top navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href>SM</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a class="scroll-link" href="#about">ABOUT</a></li>
+            <li><a class="scroll-link" href="#skills">SKILLS</a></li>
+            <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
+            <li><a href="assets/docs/Resume.pdf" target="_blank">RESUME</a></li>
+            <li><a class="scroll-link" href="#blog">BLOG</a></li>
+            <li><a class="scroll-link" href="#contact">CONTACT</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a class="scroll-link" href="#about">ABOUT</a></li>
-          <li><a class="scroll-link" href="#skills">SKILLS</a></li>
-          <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
-          <li><a href="assets/docs/Resume.pdf" target="_blank">RESUME</a></li>
-          <li><a class="scroll-link" href="#blog">BLOG</a></li>
-          <li><a class="scroll-link" href="#contact">CONTACT</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div id="main-content" class="container">
-    <div class="row">
-      <div id="intro" class="col-lg-6 col-lg-offset-3">
-        <h3 id="name">SUDHARSANAN MURALIDHARAN</h3>
-        <h5 id="caption">FULL STACK WEB DEVELOPER | ANDROID DEVELOPER</h5>
+    </nav>
+    <div id="main-content" class="container">
+      <div class="row">
+        <div id="intro" class="col-lg-6 col-lg-offset-3">
+          <h3 id="name">SUDHARSANAN MURALIDHARAN</h3>
+          <h5 id="caption">GRAD STUDENT | FULL STACK WEB DEVELOPER | ANDROID DEVELOPER</h5>
+        </div>
       </div>
     </div>
   </div>
