--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 </head>
 <body>
-  <div class="overlay"></div>
-  <div id="container">
+  <div class="container-fluid">
     <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -40,18 +39,20 @@
         </div>
       </div>
     </nav>
-    <div id="main-content" class="container">
-      <div class="row">
-        <div id="intro" class="col-lg-6 col-lg-offset-3">
-          <h3 id="name">SUDHARSANAN MURALIDHARAN</h3>
-          <h5 id="caption">GRAD STUDENT | FULL STACK WEB DEVELOPER | ANDROID DEVELOPER</h5>
-        </div>
+    <div id="intro" class="row">
+      <div class="col-lg-6 col-lg-offset-3">
+        <h3 id="name">SUDHARSANAN MURALIDHARAN</h3>
+        <h5 id="caption">GRAD STUDENT | FULL STACK WEB DEVELOPER | ANDROID DEVELOPER</h5>
       </div>
+    </div>
+    <div id="about-me" class="row">
+      
     </div>
   </div>
   <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
   <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
