--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Portfolio | SM | Web Developer | Grad Student</title>
+  <title>Sudharsanan Muralidharan - Portfolio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default fixed">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -31,43 +31,41 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a class="scroll-link" href="#about-me">ABOUT ME</a></li>
-            <li><a class="scroll-link" href="#work">WHAT I DO</a></li>
-            <li><a class="scroll-link" href="#github">GITHUB</a></li>
+            <li><a class="scroll-link" href="#work">WORK</a></li>
+            <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
             <li><a class="scroll-link" href="#blog">BLOG</a></li>
             <li><a class="scroll-link" href="#contact">CONTACT</a></li>
           </ul>
         </div>
       </div>
     </nav>
-    <div id="intro" class="row animated bounceIn">
+    <div id="intro" class="row animated bounce">
       <div class="col-lg-6 col-lg-offset-3">
         <img src="assets/img/avatar.png" alt="Profile" class="avatar">
         <h3 id="name">SUDHARSANAN MURALIDHARAN</h3>
-        <h5 id="caption">GRAD STUDENT | FULL STACK WEB DEVELOPER</h5>
+        <h5 id="caption">FULL STACK WEB DEVELOPER</h5>
       </div>
     </div>
-    <div id="about-me" class="row">
-      <div class="col-lg-10 col-lg-offset-1">
-        <h4><b>ABOUT ME</b></h4>
+    <div id="about-me" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>ABOUT ME</h4>
         <div class="row">
-          <div class="col-lg-6 left-content">
-            <img src="assets/img/back.jpg" alt="Profile" style="width: 100%; height: auto;">
-          </div>
-          <div class="col-lg-6 right-content wow fadeIn">
-            <p></p>
+          <div class="col-lg-10 col-lg-offset-1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/smoothscroll.js"></script>
-  <script type="text/javascript" src="js/wow.min.js"></script>
-  <script type="text/javascript" src="js/util.js"></script>
-  <script>
-    new WOW().init();
-  </script>
+ </div>
+ <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+ <script type="text/javascript" src="js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="js/smoothscroll.js"></script>
+ <script type="text/javascript" src="js/wow.min.js"></script>
+ <script type="text/javascript" src="js/midnight.jquery.min.js"></script>
+ <script type="text/javascript" src="js/util.js"></script>
+ <script>
+  new WOW().init();
+</script>
   <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
