--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a class="scroll-link" href="#about-me">ABOUT ME</a></li>
             <li><a class="scroll-link" href="#work">WORK</a></li>
+            <li><a class="scroll-link" href="#skills">SKILLS</a></li>
             <li><a class="scroll-link" href="#projects">PROJECTS</a></li>
             <li><a class="scroll-link" href="#blog">BLOG</a></li>
             <li><a class="scroll-link" href="#contact">CONTACT</a></li>
@@ -51,21 +52,97 @@
         <h4>ABOUT ME</h4>
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <img src="assets/img/back.jpg" alt="Back">
+            <div class="wow fadeIn">
+              <p>Hey there! I am Sudharsanan from India. Currently a Graduate student in Computer Science at University of Texas, Dallas. A Rubyist, Hacker, Blogger and a Technophile.</p>
+              <p>I am a Full stack web developer who is totally passionate about the web. I use Ruby on Rails & Ember.js to create web applications. I am a strong supporter of open source software. I believe that software should be built by an open community of developers, hackers and designers.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
- </div>
- <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
- <script type="text/javascript" src="js/bootstrap.min.js"></script>
- <script type="text/javascript" src="js/smoothscroll.js"></script>
- <script type="text/javascript" src="js/wow.min.js"></script>
- <script type="text/javascript" src="js/midnight.jquery.min.js"></script>
- <script type="text/javascript" src="js/util.js"></script>
- <script>
-  new WOW().init();
-</script>
+    <div id="work" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>WHAT I DO</h4>
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div class="wow fadeIn">
+              <div class="col-lg-3">
+                <img src="assets/img/ruby.png" alt="Ruby">
+              </div>
+              <div class="col-lg-3">
+                <img src="assets/img/rails.png" alt="Rails">
+              </div>
+              <div class="col-lg-3">
+                <img src="assets/img/ember.png" alt="Ember">
+              </div>
+              <div class="col-lg-3">
+                <img src="assets/img/android.png" alt="Android">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="skills" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>SKILLS</h4>
+        <div class="wow fadeIn">
+          <div class="row">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="projects" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>PROJECTS</h4>
+        <div class="wow fadeIn">
+          <div class="row">
+            <div class="col-lg-3 col-lg-offset-1">
+              <img src="assets/img/octocat.jpg" alt="Octocat" style="width: 100%;">
+            </div>
+            <div class="col-lg-6 col-lg-offset-1">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="blog" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>BLOG</h4>
+        <div class="wow fadeIn">
+          <div class="row">
+            <div class="col-lg-6 col-lg-offset-1">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="col-lg-4">
+              <img src="assets/img/jekyll.png" alt="Jekyll" style="width: 100%;">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="contact" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>CONTACT ME</h4>
+        <div class="wow fadeIn">
+          <div class="row">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/smoothscroll.js"></script>
+  <script type="text/javascript" src="js/wow.min.js"></script>
+  <script type="text/javascript" src="js/util.js"></script>
+  <script>
+    new WOW().init();
+  </script>
   <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
