Going great till now

--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
     </nav>
     <div id="intro" class="row animated bounce">
       <div class="col-lg-6 col-lg-offset-3">
-        <img src="assets/img/avatar.png" alt="Profile" class="avatar">
+        <img id="avatar" src="assets/img/avatar.png" alt="Avatar" class="avatar">
+        <img id="avatar-alt" src="assets/img/avatar-alt.jpg" alt="Avatar Alt" class="avatar-alt">
         <h3>SUDHARSANAN MURALIDHARAN</h3>
         <h5>GRAD STUDENT | FULL STACK WEB DEV | ANDROID DEV</h5>
         <div id="social">
-          <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" class="social-link" target="_blank">
+          <a id="twitter-social" href="https://twitter.com/sudharshan_iyer" target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
-          <a id="github-social" href="https://github.com/sudharti" class="social-link" target="_blank">
+          <a id="github-social" href="https://github.com/sudharti" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" class="social-link" target="_blank">
+          <a id="linkedin-social" href="https://www.linkedin.com/in/sudharsananm" target="_blank">
             <i class="fa fa-linkedin"></i>
           </a>
-          <a id="mail" href="mailto:sudhar.ti@gmail.com" class="social-link">
+          <a id="mail" href="mailto:sudhar.ti@gmail.com">
             <i class="fa fa-envelope-o"></i>
           </a>
         </div>  
@@ -71,7 +72,7 @@
                 <p>A Full Stack web developer who loves to build awesome Web apps. A Rubyist riding <a href="http://rubyonrails.org/">Rails</a>. Also loves to build some awesome Android apps. Currently exploring the world of <a href="http://emberjs.com">Ember</a>.
                 </p>
                 <p>
-                  BatFan, Metalhead, Gamer.
+                  When I am not building anything I spend time playing games on my Xbox 360 or riding the Bike.
                 </p>
               </div>
             </div>
@@ -83,9 +84,9 @@
           <h4>WHAT I DO</h4>
           <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
-              <div class="wow fadeIn">
-                <p>I love to build awesome stuff. I use the following technologies.</p>
-                <div id="tech" class="row">
+              <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. Following are some of the technologies I use daily to create awesome Apps!</p>
+              <div id="tech" class="row">
+                <div class="wow bounceIn">
                   <div class="col-lg-3">
                     <div class="thumbnail">
                       <img src="assets/img/ruby.png" alt="Ruby">
@@ -98,7 +99,7 @@
                     <div class="thumbnail">
                       <img src="assets/img/rails.png" alt="Rails">
                       <div class="caption">
-                        <p>Rails</p>
+                        <p>Ruby on Rails</p>
                       </div>
                     </div>
                   </div>
