--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-progressbar.min.css">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -42,7 +43,6 @@
     <div id="intro" class="row animated bounce">
       <div class="col-lg-6 col-lg-offset-3">
         <img id="avatar" src="assets/img/avatar.png" alt="Avatar" class="avatar">
-        <img id="avatar-alt" src="assets/img/avatar-alt.jpg" alt="Avatar Alt" class="avatar-alt">
         <h3>SUDHARSANAN MURALIDHARAN</h3>
         <h5>GRAD STUDENT | FULL STACK WEB DEV | ANDROID DEV</h5>
         <div id="social">
@@ -125,20 +125,61 @@
           </div>
         </div>
       </div>
-    <!-- <div id="skills" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4>SKILLS</h4>
-        <div class="wow fadeIn">
+      <div id="skills" class="row section">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h4>SKILLS</h4>
           <div class="row">
-            <div class="col-lg-3">
-              <div class="chart" data-percent="85">
-                <span class="text-center"></span>
+            <div class="col-lg-10 col-lg-offset-1">
+              <div id="skill-set" class="wow fadeIn">
+                <div class="row">
+                  <div class="col-lg-2">
+                    <img src="assets/img/ruby-icon.png" alt="Ruby" class="skill-icon">
+                  </div>
+                  <div class="col-lg-10">
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-ruby" data-transitiongoal="78">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-2">
+                    <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
+                  </div>
+                  <div class="col-lg-10">
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-2">
+                    <img src="assets/img/rails-icon.png" alt="Rails" class="skill-icon">
+                  </div>
+                  <div class="col-lg-10">
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-rails" data-transitiongoal="85">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-2">
+                    <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
+                  </div>
+                  <div class="col-lg-10">
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-android" data-transitiongoal="90">
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
     <!-- <div id="projects" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>PROJECTS</h4>
@@ -183,19 +224,10 @@
   <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap-progressbar.min.js"></script>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
-  <script type="text/javascript" src="js/jquery.easypiechart.min.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
-  <script>
-    $(function() {
-      $('.chart').easyPieChart({
-        animate: 2000,
-        trackColor: false,
-        scaleColor: false
-      });
-    });
-  </script>
   <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
