--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h4>WHAT I DO</h4>
           <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
-              <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. Following are some of the technologies I use daily to create awesome Apps!</p>
+              <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
               <div id="tech" class="row">
                 <div class="wow bounceIn">
                   <div class="col-lg-3">
@@ -99,7 +99,7 @@
                     <div class="thumbnail">
                       <img src="assets/img/rails.png" alt="Rails">
                       <div class="caption">
-                        <p>Ruby on Rails</p>
+                        <p>Rails</p>
                       </div>
                     </div>
                   </div>
@@ -144,11 +144,11 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-2">
-                    <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
+                    <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
                   </div>
                   <div class="col-lg-10">
                     <div class="progress">
-                      <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
+                      <div class="progress-bar progress-bar-android" data-transitiongoal="90">
                       </div>
                     </div>
                   </div>
@@ -163,14 +163,14 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div>                
                 <div class="row">
                   <div class="col-lg-2">
-                    <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
+                    <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
                   </div>
                   <div class="col-lg-10">
                     <div class="progress">
-                      <div class="progress-bar progress-bar-android" data-transitiongoal="90">
+                      <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
                       </div>
                     </div>
                   </div>
