--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap-progressbar.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.css">
   <link rel="stylesheet" href="assets/css/animate.min.css">
+  <link rel="stylesheet" href="assets/css/owl.carousel.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 </head>
@@ -67,111 +68,103 @@
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="wow fadeIn">
+              <p>Hi. I am Sudharsanan from India. Currently a Grad Student in Computer Science at University of Texas, Dallas. I am a Hacker, Blogger, Freelancer &amp; a huge Gadget Freak.</p>
+              <p>A Full Stack web developer who loves to build awesome Web apps. A Rubyist riding <a href="http://rubyonrails.org/">Rails</a>. Also loves to build some awesome Android apps. Currently exploring the world of <a href="http://emberjs.com">Ember</a>.
+              </p>
               <p>
-                Hi. I am Sudharsanan from India. Currently a Grad Student in Computer Science at University of Texas, Dallas. I am a Hacker, Blogger, Freelancer &amp; a huge Gadget Freak.</p>
-                <p>A Full Stack web developer who loves to build awesome Web apps. A Rubyist riding <a href="http://rubyonrails.org/">Rails</a>. Also loves to build some awesome Android apps. Currently exploring the world of <a href="http://emberjs.com">Ember</a>.
-                </p>
-                <p>
-                  When I am not building anything I spend time playing games on my Xbox 360 or riding the Bike.
-                </p>
-              </div>
+                When I am not building anything I spend time playing games on my Xbox 360 or riding the Bike.
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <div id="work" class="row section">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h4>WHAT I DO</h4>
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
-              <div id="tech" class="row">
-                <div class="wow bounceIn">
-                  <div class="col-lg-3">
-                    <div class="thumbnail">
-                      <img src="assets/img/ruby.png" alt="Ruby">
-                      <div class="caption">
-                        <p>Ruby</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="thumbnail">
-                      <img src="assets/img/rails.png" alt="Rails">
-                      <div class="caption">
-                        <p>Rails</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="thumbnail">
-                      <img src="assets/img/ember.png" alt="Ember">
-                      <div class="caption">
-                        <p>Ember</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="thumbnail">
-                      <img src="assets/img/android.png" alt="Android">
-                      <div class="caption">
-                        <p>Android</p>
-                      </div>
-                    </div>
-                  </div>
+    </div>
+    <div id="work" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>WHAT I DO</h4>
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <p>I strive to create simple, clean &amp; responsive Web as well as Mobile apps. and I also embrace Minimalistic design. Here are some of the technologies I use daily to create awesome Apps!</p>
+            <div class="wow fadeIn" id="tech">
+              <div class="row">
+                <div class="col-lg-3">
+                  <img src="assets/img/ruby.png" alt="Ruby">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/rails.png" alt="Rails">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/ember.png" alt="Ember">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/android.png" alt="Android">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <img src="assets/img/html5.png" alt="HTML5">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/css3.png" alt="CSS3">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/bootstrap.png" alt="Bootstrap">
+                </div>
+                <div class="col-lg-3">
+                  <img src="assets/img/grunt.png" alt="Grunt">
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="skills" class="row section">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h4>SKILLS</h4>
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <div id="skill-set" class="wow fadeIn">
-                <div class="row">
-                  <div class="col-lg-2">
-                    <img src="assets/img/ruby-icon.png" alt="Ruby" class="skill-icon">
-                  </div>
-                  <div class="col-lg-10">
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-ruby" data-transitiongoal="78">
-                      </div>
+    </div>
+    <div id="skills" class="row section">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h4>SKILLS</h4>
+        <div class="row">
+          <div class="col-lg-10 col-lg-offset-1">
+            <div id="skill-set" class="wow fadeIn">
+              <div class="row">
+                <div class="col-lg-2">
+                  <img src="assets/img/ruby-icon.png" alt="Ruby" class="skill-icon">
+                </div>
+                <div class="col-lg-10">
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-ruby" data-transitiongoal="78">
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-lg-2">
-                    <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
-                  </div>
-                  <div class="col-lg-10">
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-android" data-transitiongoal="90">
-                      </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2">
+                  <img src="assets/img/android-icon.png" alt="Android" class="skill-icon">
+                </div>
+                <div class="col-lg-10">
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-android" data-transitiongoal="90">
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-lg-2">
-                    <img src="assets/img/rails-icon.png" alt="Rails" class="skill-icon">
-                  </div>
-                  <div class="col-lg-10">
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-rails" data-transitiongoal="85">
-                      </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-2">
+                  <img src="assets/img/rails-icon.png" alt="Rails" class="skill-icon">
+                </div>
+                <div class="col-lg-10">
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-rails" data-transitiongoal="85">
                     </div>
                   </div>
-                </div>                
-                <div class="row">
-                  <div class="col-lg-2">
-                    <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
-                  </div>
-                  <div class="col-lg-10">
-                    <div class="progress">
-                      <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
-                      </div>
+                </div>
+              </div>                
+              <div class="row">
+                <div class="col-lg-2">
+                  <img src="assets/img/ember-icon.png" alt="Ember" class="skill-icon">
+                </div>
+                <div class="col-lg-10">
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-ember" data-transitiongoal="72">
                     </div>
                   </div>
                 </div>
@@ -180,52 +173,44 @@
           </div>
         </div>
       </div>
-    <!-- <div id="projects" class="row section">
+    </div>
+    <div id="projects" class="row section">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>PROJECTS</h4>
         <div class="wow fadeIn">
           <div class="row">
-            <div class="col-lg-3 col-lg-offset-1">
-              <img src="assets/img/octocat.jpg" alt="Octocat" style="width: 100%;">
+          <div id="projects-owl" class="owl-carousel">
+              <div class="rails-item item">
+                <h4>TWITTER CLONE</h4>
+              </div>
+              <div class="android-item item">
+                <h4>REDDIT CLIENT</h4>
+              </div>
+              <div class="ember-item item">
+                <h4>TODO0</h4>
+              </div>
+              <div class="item"><h1>3</h1></div>
+              <div class="item"><h1>4</h1></div>
+              <div class="item"><h1>5</h1></div>
+              <div class="item"><h1>6</h1></div>
+              <div class="item"><h1>7</h1></div>
+              <div class="item"><h1>8</h1></div>
             </div>
-            <div class="col-lg-6 col-lg-offset-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="customNavigation">
+              <a class="btn prev">Previous</a>
+              <a class="btn next">Next</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div id="blog" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4>BLOG</h4>
-        <div class="wow fadeIn">
-          <div class="row">
-            <div class="col-lg-6 col-lg-offset-1">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="col-lg-4">
-              <img src="assets/img/jekyll.png" alt="Jekyll" style="width: 100%;">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="contact" class="row section">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h4>CONTACT</h4>
-        <div class="wow fadeIn">
-          <div class="row">
-    
-          </div>
-        </div>
-      </div>
-    </div> -->
   </div>
   <script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
   <script type="text/javascript" src="assets/js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap-progressbar.min.js"></script>
   <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
+  <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
   <script type="text/javascript" src="assets/js/wow.min.js"></script>
   <script type="text/javascript" src="assets/js/util.js"></script>
   <!-- <script>
